# SimulacionFisicaVideojuegos

./: .gitignore  CMakeLists.txt  README.md
skeleton/: Particle.cpp  Particle.h  RenderUtils.cpp  main.cpp
src/: RenderUtils.cpp  RenderUtils.hpp  callbacks.cpp  callbacks.hpp  consts.hpp  main.cpp
src/Components/: BallComponent.cpp  BallComponent.hpp  BolicheComponent.cpp  BolicheComponent.hpp  CubeAreaDeleterComponent.cpp  CubeAreaDeleterComponent.hpp  DynamicRigidbodyComponent.cpp  DynamicRigidbodyComponent.hpp  FloorComponent.hpp  HeightDeletableComponent.cpp  HeightDeletableComponent.hpp  ParticleComponent.cpp  ParticleComponent.hpp  ProjectileParticleComponent.cpp  ProjectileParticleComponent.hpp  StaticRigidbodyComponent.cpp  StaticRigidbodyComponent.hpp  TemperatureComponent.cpp  TemperatureComponent.hpp  TimeDeletableComponent.cpp  TimeDeletableComponent.hpp  components_defs.hpp
src/ForceGenerators/: BuoyancyForceGenerator.cpp  BuoyancyForceGenerator.hpp  ExplosionForceGenerator.cpp  ExplosionForceGenerator.hpp  GravityForceGenerator.cpp  GravityForceGenerator.hpp  ThermalLiftForceGenerator.cpp  ThermalLiftForceGenerator.hpp
src/ParticleGenerators/: DustDiskParticleGenerator.cpp  DustDiskParticleGenerator.hpp  SmokeFollowParticleGenerator.cpp  SmokeFollowParticleGenerator.hpp
src/ParticleSystem/: ForceGenerator.hpp  ParticleGenerator.cpp  ParticleGenerator.hpp  ParticleSystem.cpp  ParticleSystem.hpp
src/Physics/: Entity.cpp  Entity.hpp  GravityForceGenerator.cpp  GravityForceGenerator.hpp  IntegrableEntity.cpp  IntegrableEntity.hpp  Particle.cpp  Particle.hpp  Petanque.cpp  Petanque.hpp  Projectile.cpp  Projectile.hpp
src/Physics/Particles/: DustDiskParticleGenerator.cpp  DustDiskParticleGenerator.hpp  GaussianParticleGenerator.cpp  GaussianParticleGenerator.hpp  Particle.cpp  Particle.hpp  ParticleGenerator.cpp  ParticleGenerator.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Projectile.cpp  Projectile.hpp
src/Render/: Render.cpp  Render.h
src/Scenes/: GameplayScene.cpp  GameplayScene.hpp  Scene0.cpp  Scene0.hpp  Scene1.cpp  Scene1.hpp  Scene2.cpp  Scene2.hpp
src/Utils/: Component.hpp  Entity.cpp  Entity.hpp  EntityContainer.cpp  EntityContainer.hpp  FlaggedActivable.hpp  GameScene.cpp  GameScene.hpp  GaussianRandomizer.cpp  GaussianRandomizer.hpp  KeyReceiver.hpp  Killable.hpp  KillableList.hpp  PhysicsSceneContainer.cpp  PhysicsSceneContainer.hpp  Scene.cpp  Scene.hpp  Scene0.cpp  Scene0.hpp  Scene1.cpp  Scene1.hpp  Scene2.cpp  Scene2.hpp  SelfRegisteredRegistry.hpp  Timer.hpp  UniformRandomizer.cpp  UniformRandomizer.hpp  components_defs.hpp  physxDefs.hpp
